--- a/english.html
+++ b/english.html
@@ -9106,10 +9106,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200428093154690" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200501131446771" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200430202907615" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200501135023243" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9118,7 +9118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Bearage night]] Yoyo [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Life is for those who can't deal with drugs]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9138,7 +9138,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200430210118844" title="$:/temp/search">
+<div created="20161023184814872" modified="20200501125741134" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9298,7 +9298,7 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
 
 </pre>
 </div>
-<div created="20200217141431467" modified="20200324165339606" tags="Music [[Here in the Ghetto]] [[A friend]] [[Hunky Dory]]" title="420">
+<div created="20200217141431467" modified="20200501131516710" tags="Music [[Here in the Ghetto]] [[A friend]] [[Hunky Dory]] [[Life is for those who can't deal with drugs]]" title="420">
 <pre>[img[pictures/420.jpg]]
 
 !!![[Tomer]]:
@@ -9356,7 +9356,7 @@ With the assistance of the code she has transplanted in my father, in me and in 
 
  &lt;&lt;heblink [[אימא מהאגדות]]&gt;&gt;</pre>
 </div>
-<div created="20200212200933944" modified="20200409145754897" tags="Films" title="A friend">
+<div created="20200212200933944" modified="20200501131544944" tags="Films [[Life is for those who can't deal with drugs]]" title="A friend">
 <pre>[img[pictures/friend.jpg]]
 
 
@@ -9516,7 +9516,7 @@ To let the back lengthen and widen.
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
-<div created="20200215135137601" modified="20200324165505207" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]] [[Hunky Dory]]" title="Alfred">
+<div created="20200215135137601" modified="20200501131612153" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]] [[Hunky Dory]] [[Life is for those who can't deal with drugs]]" title="Alfred">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[Gura]]:
@@ -9532,7 +9532,7 @@ He's smart, talented, diligent, curious, he smiles a lot- even though I chose to
 
 </pre>
 </div>
-<div created="20200426135314675" modified="20200430194128541" tags="[[True stories]] Metafiction" title="Amalya">
+<div created="20200426135314675" modified="20200501131631127" tags="[[True stories]] Metafiction [[Life is for those who can't deal with drugs]]" title="Amalya">
 <pre>[img[pictures/amalya.jpg]]
 
 
@@ -9698,7 +9698,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200430194832626" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
+<div created="20200216150039212" modified="20200501125830442" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9733,7 +9733,7 @@ A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] t
 
 </pre>
 </div>
-<div created="20200430191811719" modified="20200430213723821" tags="[[Dreams that we've dreamt]]" title="Bearage night">
+<div created="20200430191811719" modified="20200501131704299" tags="[[Dreams that we've dreamt]] [[Life is for those who can't deal with drugs]]" title="Bearage night">
 <pre>[img[pictures/HqWn77LXEeMsLQ5x.JPG]]
 
 
@@ -10142,7 +10142,7 @@ And she’s [[a wonder|https://www.youtube.com/watch?v=Zwh8ACexBzo]].
  &lt;&lt;heblink [[פאי דובדבנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215122951144" modified="20200217133224213" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]]" title="Chez Finnie`s">
+<div created="20200215122951144" modified="20200501131756887" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]] [[Life is for those who can't deal with drugs]]" title="Chez Finnie`s">
 <pre>!!![[Yoyo]]:
 
 Couple of days ago, [[we received|Coen Sisters]] a letter from [[Dandan]], after not hearing from him for about a year. I love him so much and I miss him. With his permission, I'm pasting the letter here:
@@ -10586,7 +10586,7 @@ On June, [[Dandan]] went.
 
 </pre>
 </div>
-<div created="20200212171338780" modified="20200212223524288" tags="[[Coen sister]] Mothers Houses [[True stories]]" title="Dandan went">
+<div created="20200212171338780" modified="20200501131908296" tags="[[Coen sister]] Mothers Houses [[True stories]] [[Life is for those who can't deal with drugs]]" title="Dandan went">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 
@@ -11049,7 +11049,7 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
  &lt;&lt;heblink [[תהפוכת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213154202937" modified="20200220183349805" tags="Kitchens [[Monkeys with car keys]] Coffee" title="Food addicts">
+<div created="20200213154202937" modified="20200501132004318" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]]" title="Food addicts">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 !!![[The team]]:
@@ -11130,7 +11130,7 @@ Need a document? Need to send a fax? Need a business card? Need to scan? Need a 
  &lt;&lt;heblink [[משחקי הכס]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215210632854" modified="20200219150106439" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
+<div created="20200215210632854" modified="20200501132056277" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]] [[Life is for those who can't deal with drugs]]" title="Gan-Ya">
 <pre>[img[pictures/gan-ya.jpg]]
 
 !!![[Yoyo]]:
@@ -11354,7 +11354,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
  &lt;&lt;heblink [[גורה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216190625452" modified="20200216191751667" tags="Mothers Baking Metafiction" title="Gura`s tale">
+<div created="20200216190625452" modified="20200501132134799" tags="Mothers Baking Metafiction [[Life is for those who can't deal with drugs]]" title="Gura`s tale">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 
@@ -12266,8 +12266,14 @@ Bottom line is, if you're standing in front of whatever it is and hesitating, wo
  &lt;&lt;heblink [[סלט חסה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219153806611" modified="20200324171047687" tags="[[Hunky Dory]] [[Monkeys with car keys]]" title="Life is for those who can't deal with drugs">
+<div created="20200219153806611" modified="20200501131432202" tags="[[Hunky Dory]] [[Monkeys with car keys]]" title="Life is for those who can't deal with drugs">
 <pre>[img[pictures/hachaim-noadoo.gif]]
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Life is for those who can't deal with drugs]]&quot;&gt;&gt;
+
 
 
  &lt;&lt;heblink [[החיים נועדו למי שלא יכול להתמודד עם סמים]]&gt;&gt;</pre>
@@ -12848,7 +12854,7 @@ The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, n
 
  &lt;&lt;heblink [[אימא, סבתא ואני]]&gt;&gt;</pre>
 </div>
-<div created="20200202190317522" modified="20200217211913122" tags="[[TV Series]] TV [[The global village]]" title="Monkeys with car keys">
+<div created="20200202190317522" modified="20200501134333597" tags="[[TV Series]] TV [[The global village]] [[Life is for those who can't deal with drugs]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 
@@ -13578,7 +13584,7 @@ He studied industrial design, and he has a [[working space|Queng's workshop]] at
  &lt;&lt;heblink [[רן יגיל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200217174006071" modified="20200428095819553" tags="Houses Families [[The estate where I grew up]]" title="Raziel and Rafael">
+<div created="20200217174006071" modified="20200501134602300" tags="Houses Families [[The estate where I grew up]] [[Life is for those who can't deal with drugs]]" title="Raziel and Rafael">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[Eva]]:
@@ -13829,7 +13835,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
  &lt;&lt;heblink [[שניצל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219185255391" modified="20200219185508059" tags="[[On the road to somewhere]] [[Iry and Gura]]" title="Searching for Iry">
+<div created="20200219185255391" modified="20200501134637335" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Life is for those who can't deal with drugs]]" title="Searching for Iry">
 <pre>[img[pictures/mechapeset-et-iri.jpg]]
 
 
@@ -14345,7 +14351,7 @@ She is the owner of an old green Ford pickup truck (the little machine).
 
  &lt;&lt;heblink [[משפחת באומן]]&gt;&gt;</pre>
 </div>
-<div created="20200216161009061" modified="20200324172252240" tags="Films [[Outer sisters]] [[Hunky Dory]]" title="The Big Lebowski">
+<div created="20200216161009061" modified="20200501134731765" tags="Films [[Outer sisters]] [[Hunky Dory]] [[Life is for those who can't deal with drugs]]" title="The Big Lebowski">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 
@@ -14945,7 +14951,7 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 
 </pre>
 </div>
-<div created="20200216170034035" modified="20200220164712674" tags="TV [[TV Series]]" title="The Wire">
+<div created="20200216170034035" modified="20200501134832731" tags="TV [[TV Series]] [[Life is for those who can't deal with drugs]]" title="The Wire">
 <pre>[img[pictures/the-wire.jpg]]
 
 
@@ -15723,7 +15729,7 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
  &lt;&lt;heblink [[ההמשך של כוכב המשאלות]]&gt;&gt;</pre>
 </div>
-<div created="20200216174503612" modified="20200426142144921" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction Families" title="With Yoyo in Amsterdam">
+<div created="20200216174503612" modified="20200501135000462" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction Families [[Life is for those who can't deal with drugs]]" title="With Yoyo in Amsterdam">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[Gura]]:
