--- a/index.html
+++ b/index.html
@@ -9215,10 +9215,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200430192903054" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200501135049145" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200430192905006" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200501141308781" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9247,7 +9247,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200430200911082" title="$:/temp/search">
+<div created="20161023184814872" modified="20200501125621721" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9395,7 +9395,7 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20180802192842799" modified="20200324162105321" tags="[[כאן בגטו]] מוזיקה חבר [[האנקי דורי]]" title="420">
+<div created="20180802192842799" modified="20200501141303770" tags="[[כאן בגטו]] מוזיקה חבר [[האנקי דורי]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="420">
 <pre>[img[pictures/420.jpg]]
 
 !!![[תומר]]:
@@ -10225,7 +10225,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170423214419764" modified="20200426133451659" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים משפחות" title="אחות כהן">
+<div created="20170423214419764" modified="20200501135503416" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
 
 [[שלום ואהבה|imagine]].
@@ -10506,7 +10506,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Alan Ball]]&gt;&gt;</pre>
 </div>
-<div created="20170328195137638" modified="20200215135347130" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
+<div created="20170328195137638" modified="20200501135541587" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
@@ -10678,7 +10678,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200430195056673" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200501125639643" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -10789,7 +10789,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[In the morning]]&gt;&gt;
 </pre>
 </div>
-<div created="20170811181124336" modified="20200320092501534" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה סגירים" title="בבית של פיני">
+<div created="20170811181124336" modified="20200501140342040" tags="[[סיפורים אמיתיים]] [[דןדן נסע]] בתים [[חלומות שחלמנו]] כביסה סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="בבית של פיני">
 <pre>!!![[יויו]]:
 //''''
 לפני כמה ימים [[קיבלנו|האחיות כהן]] מכתב [[מדןדן|דןדן]], אחרי  שלא שמענו ממנו [[שנה בערך|דןדן נסע]]. אני כל כך  אוהב אותו ומתגעגע אליו. באישורו, אני מעתיק לכאן את המכתב:
@@ -10878,7 +10878,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20171212171900725" modified="20200324163158867" tags="סרטים [[האנקי דורי]]" title="ביג לבובסקי">
+<div created="20171212171900725" modified="20200501140400778" tags="סרטים [[האנקי דורי]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="ביג לבובסקי">
 <pre>[img[pictures/the-big-lebowski.jpg]]
 
 !!![[יויו]]:
@@ -10919,7 +10919,7 @@ Is where I want to be
 &lt;&lt;englink [[Bjork]]&gt;&gt;
 </pre>
 </div>
-<div created="20161111220614335" modified="20200426133639827" tags="בתים ילדים משפחות" title="בית האננס ההוואי של אירי">
+<div created="20161111220614335" modified="20200501140413200" tags="בתים ילדים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="בית האננס ההוואי של אירי">
 <pre>[img[pictures/AMMWBcSauRNlvNUR.JPG]]
 
 !!![[גורה]]:
@@ -11959,7 +11959,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161205195559773" modified="20200217120443194" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר [[הכפר הגלובלי]]" title="גן-יה">
+<div created="20161205195559773" modified="20200501140457951" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר [[הכפר הגלובלי]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
 
 !!![[יויו]]:
@@ -12260,7 +12260,7 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[Dandan]]&gt;&gt;
 </pre>
 </div>
-<div created="20170112183255462" modified="20200212172146242" tags="[[סיפורים אמיתיים]] בתים אימהות [[בדרך לאן שהוא]]" title="דןדן נסע">
+<div created="20170112183255462" modified="20200501140531788" tags="[[סיפורים אמיתיים]] בתים אימהות [[בדרך לאן שהוא]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="דןדן נסע">
 <pre>[img[pictures/dandan-nasa.jpg]]
 
 !!![[אירי]]:
@@ -12705,7 +12705,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Life is not About Talking]]&gt;&gt;
 </pre>
 </div>
-<div created="20170225123850883" modified="20200324171116960" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]] [[האנקי דורי]]" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
+<div created="20170225123850883" modified="20200501125713353" tags="[[קופים ממונעים]] [[סיפורים אמיתיים]] [[האנקי דורי]]" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
 <pre>[img[pictures/hachaim-noadoo.gif]]
 
 (את הgif עשה [[הדוד|הדוד האמיתי]])
@@ -12729,7 +12729,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
-
+&lt;&lt;list-links filter:&quot;[tag[החיים נועדו למי שלא יכול להתמודד עם סמים]]&quot;&gt;&gt;
 
 
 &lt;&lt;englink [[Life is for those who can't deal with drugs]]&gt;&gt;
@@ -12904,7 +12904,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20200320093433047" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים" title="המעבדה">
+<div created="20161113192814802" modified="20200501140624174" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -13088,7 +13088,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Chinese]]&gt;&gt;</pre>
 </div>
-<div created="20170406162100924" modified="20200216193615793" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
+<div created="20170406162100924" modified="20200501140645255" tags="[[מטא בדיון]] אפייה אימהות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="הסיפור על גורה">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 שסופר לאווה על ידי יויו
@@ -13107,7 +13107,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180619140440878" modified="20200216171954961" tags="סדרות טלוויזיה" title="הסמויה">
+<div created="20180619140440878" modified="20200501140702293" tags="סדרות טלוויזיה [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="הסמויה">
 <pre>[img[pictures/the-wire.jpg]]
 
 !!![[אירי]]:
@@ -14799,7 +14799,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Wishing star 29]]&gt;&gt;</pre>
 </div>
-<div created="20161113182253178" modified="20200426134537110" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[הכפר הגלובלי]] סגירים משפחות" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20200501140822629" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[הכפר הגלובלי]] סגירים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>!!![[אווה]]:
 
 זה סיפור שכתבתי בחורף 2016, והוא מתחיל בביקור אצל יויו וגורה בפריז, לארוחת כריסמס 2015
@@ -16004,7 +16004,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[What have you done for peace today]]&gt;&gt;
 </pre>
 </div>
-<div created="20161114202954459" modified="20200324191808535" tags="[[האנקי דורי]] ארוחות" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20200501140907795" tags="[[האנקי דורי]] ארוחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אווה]]:
@@ -17825,7 +17825,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Marzipan balls]]&gt;&gt;
 </pre>
 </div>
-<div created="20170411211723019" modified="20200208130301825" tags="[[חלומות שחלמנו]] [[בדרך לאן שהוא]]" title="עיר בנויה מרחובות">
+<div created="20170411211723019" modified="20200501141049630" tags="[[חלומות שחלמנו]] [[בדרך לאן שהוא]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="עיר בנויה מרחובות">
 <pre>[img[pictures/ir-bnooya.jpg]]
 
 !!![[אירי]]:
@@ -17943,7 +17943,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[The Face Directed Outside]]&gt;&gt;</pre>
 </div>
-<div created="20170601232601606" modified="20200426135136047" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]] משפחות" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20200501141108936" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]] משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -17986,7 +17986,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[Six feet uner]]&gt;&gt;
 </pre>
 </div>
-<div created="20170728194609841" modified="20200426135720807" tags="[[מטא בדיון]] [[סיפורים אמיתיים]]" title="עמליה">
+<div created="20170728194609841" modified="20200501141128041" tags="[[מטא בדיון]] [[סיפורים אמיתיים]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="עמליה">
 <pre>[img[pictures/amalya.jpg]]
 
 !!![[גורה]]:
@@ -19115,7 +19115,7 @@ Fapina''
 &lt;&lt;englink [[Couscous]]&gt;&gt;
 </pre>
 </div>
-<div created="20170817155826253" modified="20200320100240399" tags="סדרות טלוויזיה [[הכפר הגלובלי]] סגירים" title="קופים ממונעים">
+<div created="20170817155826253" modified="20200501141208583" tags="סדרות טלוויזיה [[הכפר הגלובלי]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -19450,7 +19450,7 @@ Fapina''
 
 &lt;&lt;englink [[Roast beef]]&gt;&gt;</pre>
 </div>
-<div created="20170202133543180" modified="20200426135554994" tags="[[הנחלה בה גדלתי]] בתים משפחות" title="רזיאל ורפאל">
+<div created="20170202133543180" modified="20200501141231441" tags="[[הנחלה בה גדלתי]] בתים משפחות [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
